<resources>
    <string name="app_name">Projekt Zespolowy</string>

    <string name="tytul">LOGOWANIE</string>

    <!--    Main Activity - logowanie -->
    <string name="editTextMail">E-mail</string>
    <string name="editTextHaslo">Hasło</string>
    <string name="buttonLogin">ZALOGUJ</string>
    <string name="textViewRejestracja">Nie masz konta? Zarejestruj się!</string>
    <string name="textViewPrzypomnienieHasla">Zapomniałeś hasła? Kliknij tutaj!</string>

    <!--    Przypomneinie hasla -->
    <string name="textViewInfo">Na podany przez Ciebie adres e-mail zostanie wysłany link z aktywacją nowego hasła!</string>
    <string name="buttonReset">Wyślij</string>

    <!--        Rejestracja -->
    <string name="editTextImie">Imię</string>
    <string name="editTextNazwisko">Nazwisko</string>
    <string name="editTextNumerTelefonu">Numer telefonu</string>
    <string name="buttonRejestracja">Zarejestruj</string>
    <string name="textViewLogowanie">Jesteś zarejestrowany? Zaloguj się!</string>

    <!--    Admin Home -->
    <string name="buttonDodawanieWycieczek">Dodaj wycieczkę</string>
    <string name="buttonListaWycieczek">Wycieczki</string>
    <string name="buttonListaUzytkownikow">Użytkownicy</string>
    <string name="buttonLogOut">Wyloguj</string>

    <!--    Dodawanie wycieczki -->
    <string name="textViewDodawanieWycieczki">UTWÓRZ WYCIECZKĘ</string>
    <string name="editTextMiejsce">Miejsce</string>
    <string name="editTextCena">Cena</string>
    <string name="editTextData">Data</string>
    <string name="editTextOpis">Opis wycieczki</string>
    <string name="buttonDodajZdjecie">Dodaj zdjęcie</string>
    <string name="editTextPrzewodnik">Imię i nazwisko przewodnika</string>
    <string name="buttonEnter">Zatwierdź</string>

    <!--    Przeglad wycieczki -->
    <string name="buttonEdycja">Edytuj wycieczkę</string>
    <string name="buttonUsun">Usuń wycieczkę</string>
    <string name="textViewKomunikat">Czy na pewno chcesz usunąć wycieczkę?</string>

    <string name="textViewPrzewodnik">Przewodnik</string>
    <string name="textViewBlokadaKonta">Blokada konta</string>
    <string name="buttonZmianaHasla">Zmień hasło</string>

    <!--    Uzytkownik Home-->
    <string name="buttonMojeWycieczki">Moje wycieczki</string>
    <string name="buttonKonto">Moje konto</string>

    <!--    Uzytkownik Przeglad Wycieczki -->
    <string name="buttonRezerwacja">Zarezerwuj wycieczkę</string>
    <string name="textViewKomunikatRezerwacja">Czy na pewno chcesz zarezerwować wycieczkę?</string>

    <!--    Uzytkownik Moje konto-->
    <string name="editTextKwota">Podaj kwotę</string>
    <string name="buttonWplac">Wpłać</string>
    <string name="buttonAnuluj">Anuluj rezerwację</string>

    <!--    Przewodnik Main-->
    <string name="buttonUczestnicy">Uczestnicy</string>
</resources>