<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin_DodawanieWycieczek">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewDodawanieWycieczki"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <EditText
        android:id="@+id/editTextMiejsce"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/editTextMiejsce"
        android:textAlignment="center"
        android:background="@drawable/rounded_inputs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        app:layout_constraintVertical_bias="0.01" />

    <EditText
        android:id="@+id/editTextCena"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/editTextCena"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        android:background="@drawable/rounded_inputs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMiejsce"
        app:layout_constraintVertical_bias="0.035" />

    <EditText
        android:id="@+id/editTextDataWycieczki"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/editTextData"
        android:textAlignment="center"
        android:inputType="date"
        android:background="@drawable/rounded_inputs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCena"
        app:layout_constraintVertical_bias="0.035" />

    <EditText
        android:id="@+id/editTextOpisWycieczki"
        android:layout_width="320dp"
        android:layout_height="150dp"
        android:background="@drawable/rounded_inputs"
        android:hint="@string/editTextOpis"
        android:importantForAutofill="no"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength="2000"
        android:maxLines="10"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDataWycieczki"
        app:layout_constraintVertical_bias="0.042"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextNazwiskoPrzewodnika"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:hint="@string/editTextPrzewodnik"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:background="@drawable/rounded_inputs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextOpisWycieczki"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/buttonDodajZdjecie"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonDodajZdjecie"
        android:background="@drawable/rounded_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNazwiskoPrzewodnika"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/buttonZatwierdzWycieczke"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonEnter"
        android:background="@drawable/rounded_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDodajZdjecie"
        app:layout_constraintVertical_bias="0.4" />


</androidx.constraintlayout.widget.ConstraintLayout>