<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Uzytkownik_MAIN">

    <Button
        android:id="@+id/buttonWycieczki"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonListaWycieczek"
        android:background="@drawable/rounded_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169" />

    <Button
        android:id="@+id/buttonMojeWycieczki"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonMojeWycieczki"
        android:background="@drawable/rounded_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonWycieczki"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/buttonKonto"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonKonto"
        android:background="@drawable/rounded_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMojeWycieczki"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/buttonWylogowanie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonLogOut"
        android:background="@drawable/rounded_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonKonto"
        app:layout_constraintVertical_bias="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>