<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrzypomnienieHasla">

    <TextView
        android:id="@+id/textViewResetPassword"
        android:layout_width="320dp"
        android:layout_height="170dp"
        android:text="@string/textViewInfo"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216" />

    <EditText
        android:id="@+id/editTextResetEmail"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:background="@drawable/rounded_inputs"
        android:ems="10"
        android:hint="@string/editTextMail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewResetPassword"
        app:layout_constraintVertical_bias="0.106"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/buttonResetPassword"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_buttons"
        android:text="@string/buttonReset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextResetEmail"
        app:layout_constraintVertical_bias="0.312" />

</androidx.constraintlayout.widget.ConstraintLayout>