<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal"
    android:layout_weight="7"
    android:padding="8dp"
    android:baselineAligned="false">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="4dp">

        <ImageView
            android:id="@+id/imageMiejsce"
            android:layout_width="70dp"
            android:layout_height="50dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="7" >


        <TextView
            android:id="@+id/textViewMiejsce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="#000"
            android:shadowRadius="1.0"
            android:textColor="#666666"
            android:textSize="17sp"
            android:layout_marginBottom="5dp"
            android:maxLines="2"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:text="@string/editTextMiejsce" />

        <TextView
            android:id="@+id/textViewCena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#777777"
            android:textSize="16sp"
            android:maxLines="2"
            android:minLines="2"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:text="@string/editTextCena"/>

        <TextView
            android:id="@+id/textViewData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#777777"
            android:textSize="16sp"
            android:maxLines="2"
            android:minLines="2"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:text="@string/editTextData"/>

    </LinearLayout>
</LinearLayout>