<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewEdycjaCena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editTextCena"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/editTextEdycjaCena"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:background="@drawable/rounded_inputs"
        android:ems="10"
        android:textAlignment="center"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEdycjaCena"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/textViewEdycjaData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editTextData"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEdycjaCena"
        app:layout_constraintVertical_bias="0.03" />

    <EditText
        android:id="@+id/editTextEdycjaData"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="date"
        android:textAlignment="center"
        android:background="@drawable/rounded_inputs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEdycjaData"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/textViewEdycjaPrzewodnik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editTextPrzewodnik"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEdycjaData"
        app:layout_constraintVertical_bias="0.03" />

    <EditText
        android:id="@+id/editTextEdycjaPrzewodnik"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:background="@drawable/rounded_inputs"
        android:ems="10"
        android:textAlignment="center"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEdycjaPrzewodnik"
        app:layout_constraintVertical_bias="0.025" />
</androidx.constraintlayout.widget.ConstraintLayout>